--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
-pandas~=2.1.0
-matplotlib~=3.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+contourpy==1.1.1
+cycler==0.11.0
+fonttools==4.42.1
+idna==3.4
+kiwisolver==1.4.5
+matplotlib==3.6.3
+numpy==1.26.0
+packaging==23.1
+pandas==2.1.0
+Pillow==10.0.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
+six==1.16.0
+tzdata==2023.3
+urllib3==2.0.4
