--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ numpy==1.26.0
 packaging==23.1
 pandas==2.1.0
 Pillow==10.0.1
+pygame==2.5.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
